--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM centos:7
-RUN yum install httpd -y
-ENV user=vijay
+RUN yum install httpd -y 
+ENV user=vijayarajd1
 COPY index.html /var/www/html
 
